@@ -39,4 +39,19 @@
 
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId/>
+                <configuration>
+                    <mainClass>org.betriebssysteme.view.ProductionLineApp</mainClass>
+                    <commandlineArgs>
+                        --enable-native-access=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                    </commandlineArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
